--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - name: Update gist
-        uses: yg/gh-box@master
+        uses: dimaminka/gh-box@master
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           GIST_ID: 68e6e4ebdb2b59b8a691b81ab73cb3d2
